# Boids

./: CMakeLists.txt  Makefile
src/: main.cpp  vec.hpp
